--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,23 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div id="banner">
+    <!--maybe later <%= image_tag("logo.png") %>-->
+    <h1><%= @page_title || "Assignment Sentinel" %></h1>
+    <h2>Watching over your due dates so you have to</h2>
+  </div>
+  <div id="columns">
+    <div id="side">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/faq">Questions</a></li>
+        <li><a href="/news">News</a></li>
+        <li><a href="/contact">Contact</a></li>
+      </ul>
+    </div>
+    <div id="main">
+      <%= yield %>
+    </div>
+  </div>
 </body>
 </html>
