Added paperclip. Added avatar using paperclip. Ran migrate.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,6 +26,9 @@
       <%= f.password_field :password_confirmation, size: 40 %>
     </div>
     <div>
+      <%= f.file_field :avatar %>
+    </div>
+    <div>
       <%= f.submit %>
     </div>
   </fieldset>
