--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <b>Name:</b>
   <%= @user.name %>
+  <%= image_tag @user.avatar.url(:medium) %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
