--- a/app/views/pages/my_courses.html.erb
+++ b/app/views/pages/my_courses.html.erb
@@ -4,8 +4,6 @@
   <tr>
     <th>Course Number</th>
     <th>Name</th>
-    <th># of Students</th>
-    <th></th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,14 +13,6 @@
   <tr>
     <td><%= course.course_number %></td>
     <td><%= course.name %></td>
-    <td><%= course.users.count %></td>
-    <td>
-      <% if course.users.include?(@user) %>
-        <%= link_to 'Leave', "/courses/leave/#{course.id}" %>
-      <% else %>
-        <%= link_to 'Join', "/courses/join/#{course.id}" %>
-      <% end %>
-    </td>
     <td><%= link_to 'Show', course %></td>
     <td><%= link_to 'Edit', edit_course_path(course) %></td>
     <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -32,4 +22,4 @@
 
 <br />
 
-<%= link_to 'New Course', new_course_path %>
+<%= link_to 'Add Course', courses_path %>
