--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
     <div id="side">
       <ul>
         <li><a href="/">Home</a></li>
+        <li><%= link_to 'My Courses', my_courses_path %></li>
         <li><a href="/faq">Questions</a></li>
         <li><a href="/news">News</a></li>
         <li><a href="/contact">Contact</a></li>
