--- a/app/views/pages/my_courses.html.erb
+++ b/app/views/pages/my_courses.html.erb
@@ -1,21 +1,15 @@
-<h1>Listing courses</h1>
+<h1>My courses</h1>
 
 <table>
   <tr>
     <th>Course Number</th>
     <th>Name</th>
-    <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @courses.each do |course| %>
   <tr>
     <td><%= course.course_number %></td>
     <td><%= course.name %></td>
-    <td><%= link_to 'Show', course %></td>
-    <td><%= link_to 'Edit', edit_course_path(course) %></td>
-    <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
