Added validation for assignments. Improved form for assignment. Edited list view for assignments

--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :course_id %><br />
-    <%= f.number_field :course_id %>
+    <%= f.collection_select(:course_id, Course.all, :id, :course_number, :prompt => true) %>
   </div>
   <div class="field">
     <%= f.label :name %><br />
