Added links to my assignments and all courses to sidebar. Renamed Add course to edit courses from the my courses page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,9 @@
     <div id="side">
       <ul>
         <li><a href="/">Home</a></li>
+        <li><%= link_to 'My Assignments', assignments_path %></li>
         <li><%= link_to 'My Courses', my_courses_path %></li>
+        <li><%= link_to 'All Courses', courses_path %></li>
         <li><a href="/faq">Questions</a></li>
         <li><a href="/news">News</a></li>
         <li><a href="/contact">Contact</a></li>
